<resources>
    <string name="app_name">Neo Reader v2.0</string>
    <string name="title">title</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="outOfRangRerror">Out Of Range.</string>
    <string name="illegalInput">Illegal Input.</string>
    <string name="dialog_reflow_settings_contrast">Contrast</string>
    <string name="contrast_level">Contrast Level</string>
    <string name="embolden">Embolden</string>
    <string name="embolden_level">Embolden Level</string>
    <string name="menu_item_smart_reflow">Reflow</string>
    <string name="menu_item_option_left">Option 1</string>
    <string name="menu_item_option_right">Option 2</string>
    <string name="dialog_reflow_settings_defect_size">Defect Size</string>
    <string name="dialog_reflow_settings_font_size">Font Size</string>
    <string name="dialog_reflow_settings_align">Align</string>
    <string name="dialog_reflow_settings_format">Format</string>
    <string name="dialog_reflow_settings_page_margins">Page margins</string>
    <string name="dialog_reflow_settings_line_spacing">Line Spacing</string>
    <string name="dialog_reflow_settings_word_spacing">Word Spacing</string>
    <string name="dialog_reflow_settings_render_size">Render Size</string>
    <string name="dialog_reflow_settings_auto_straighten">Straighten</string>
    <string name="dialog_reflow_settings_justification">Justification</string>
    <string name="dialog_reflow_settings_columns">Columns</string>
    <string name="dialog_reflow_settings_rotation">Rotation</string>
    <string name="dialog_reflow_settings_small">Small</string>
    <string name="dialog_reflow_settings_medium">Medium</string>
    <string name="dialog_reflow_settings_large">Large</string>
    <string name="dialog_reflow_settings_page_margins_small">Small</string>
    <string name="dialog_reflow_settings_page_margins_medium">Medium</string>
    <string name="dialog_reflow_settings_page_margins_large">Large</string>
    <string name="dialog_reflow_settings_render_small">Small</string>
    <string name="dialog_reflow_settings_render_medium">Medium</string>
    <string name="dialog_reflow_settings_render_large">Large</string>
    <string name="dialog_reflow_settings_render_largest">Largest</string>
    <string name="dialog_reflow_settings_justification_auto">Auto</string>
    <string name="dialog_reflow_settings_justification_left">Left</string>
    <string name="dialog_reflow_settings_justification_center">Center</string>
    <string name="dialog_reflow_settings_justification_right">Right</string>
    <string name="dialog_reflow_settings_justification_full">Full</string>
    <string name="dialog_reflow_settings_contrast_lightest">Lightest</string>
    <string name="dialog_reflow_settings_contrast_lighter">Lighter</string>
    <string name="dialog_reflow_settings_contrast_default">Default</string>
    <string name="dialog_reflow_settings_contrast_darker">Darker</string>
    <string name="dialog_reflow_settings_contrast_darkest">Darkest</string>
    <string name="go_to_page">Go To Page</string>
    <string name="dialog_crop_tittle">Crop</string>
    <string name="search_hint">Search</string>
    <string name="not_found">No Search Result</string>
    <string name="emptyselection">Empty Selection</string>
    <string name="loading_document">Loading Document</string>
    <string name="dialog_password_text_password">Password</string>
    <string name="dialog_password_set">Set</string>
    <string name="dialog_password_cancel">Cancel</string>
    <string name="Annotation">Annotation</string>
    <string name="Cancel">Cancel</string>
    <string name="add_annotation">Add</string>
    <string name="update">Update</string>
    <string name="dialog_dictionary_title">No Explanation</string>
    <string name="popup_selection_menu_page_indicator_default_value">1/1</string>
    <string name="Copy">Copy</string>
    <string name="Highlight">Highlight</string>
    <string name="Dictionary">Dictionary</string>
    <string name="popup_selection_menu_start_tts">TTS</string>
    <string name="toc">TOC</string>
    <string name="bookmark">Bookmark</string>
    <string name="annotation">Annotation</string>
    <string name="scribble">Scribble</string>
    <string name="navigation_mode">Navigation Mode</string>
    <string name="action_return">Return</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="page" formatted="false">page %d</string>
    <string name="crop">Crop</string>
    <string name="column">Column</string>
    <string name="direction">Direction</string>
    <string name="auto">Auto\n</string>
    <string name="six">Six</string>
    <string name="nine">Nine</string>
    <string name="single_page">Single\npage</string>
    <string name="double_page">Double\npage</string>
    <string name="nothing">no\ncrop</string>
    <string name="search">Search</string>
    <string name="total_page" formatted="false">Total: %d </string>
    <string name="min_scroll_toast">Has been scaled to the minimum value</string>
    <string name="max_scroll_toast">Has been scaled to the maximum value</string>
    <string name="did_not_find_the_dictionary">Didn\'t find the dictionary</string>
    <string name="screen_refresh">Screen Refresh</string>
    <string name="back">Back</string>
    <string name="close_history">Close History</string>
    <string name="delete_history">Delete History</string>
    <string name="enter_hint">Please enter your search word</string>
    <string name="searching" formatted="false">Searching %d/%d</string>
    <string name="search_end">Have finished searching</string>
    <string name="sure_delete">Are you sure you want to delete this</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_system_key" translatable="false">setting_system</string>
    <string name="settings_screen_key" translatable="false">setting_screen</string>
    <string name="settings_config_key" translatable="false">setting_config</string>
    <string name="settings_status_bar_key" translatable="false">setting_status_bar</string>
    <string name="settings_control_key" translatable="false">setting_control</string>
    <string name="settings_touch_key" translatable="false">setting_touch</string>
    <string name="settings_scribble_bar_key" translatable="false">setting_scribble_bar</string>
    <string name="settings_close_dialog_key" translatable="false">setting_close_dialog</string>
    <string name="settings_animation_key">setting_animation</string>
    <string name="settings_reflow_cache_key" translatable="false">setting_reflow_cache</string>
    <string name="settings_system_summary">System Options</string>
    <string name="settings_system_tittle">System</string>
    <string name="settings_screen_summary">Screen Setting</string>
    <string name="settings_screen_tittle">Screen</string>
    <string name="settings_config_summary">Config File Setting</string>
    <string name="settings_config_tittle">Config</string>
    <string name="settings_status_bar_summary">Config StatusBar Display Items</string>
    <string name="settings_status_bar_tittle">StatusBar</string>
    <string name="settings_control_summary">Key Binding Setting</string>
    <string name="settings_touch_summary">Touch Binding Setting</string>
    <string name="settings_control_tittle">Key Setting</string>
    <string name="settings_touch_tittle">Touch</string>
    <string name="settings_scribble_bar_summary">Config Scribble Display Items</string>
    <string name="settings_scribble_bar_tittle">ScribbleBar</string>
    <string name="settings_close_dialog_tittle">Show Close Dialog When Quit</string>
    <string name="settings_animation_tittle">Show animation During Zoom And Pan</string>
    <string name="settings_reflow_cache_tittle">Cache Reflow bitmap</string>
    <string name="settings_enable">Enabled</string>
    <string name="settings_disable">Disabled</string>
    <string name="settings_battery_percentage_show_key" translatable="false">setting_battery_percentage_show</string>
    <string name="settings_battery_graphic_show_key" translatable="false">setting_battery_graphic_show</string>
    <string name="settings_time_show_key" translatable="false">setting_time_status</string>
    <string name="settings_battery_percentage_show_tittle">Show Current Battery Percentage</string>
    <string name="settings_battery_graphic_show_tittle">Show Current Battery Graphic</string>
    <string name="settings_time_show_tittle">Show Current Time</string>
    <string name="settings_scribble_bar_show_reader_status_bar_key" translatable="false">setting_scribble_bar_show_reader_status_bar</string>
    <string name="settings_scribble_bar_show_reader_status_bar_tittle">Show Reader Status Bar In Scribble Mode</string>
    <string name="settings_show">Show</string>
    <string name="settings_hide">Hide</string>
    <string name="settings_save_reader_option_paginally_key" translatable="false">setting_save_reader_option_paginally</string>
    <string name="settings_save_reader_option_paginally_tittle">Save Options Paginally</string>
    <string name="settings_key_binding_prev_page_key" translatable="false">prevPage</string>
    <string name="settings_key_binding_next_page_key" translatable="false">nextPage</string>
    <string name="settings_key_binding_prev_view_key" translatable="false">prevScreen</string>
    <string name="settings_key_binding_next_view_key" translatable="false">nextScreen</string>
    <string name="settings_key_binding_move_left_key" translatable="false">moveLeft</string>
    <string name="settings_key_binding_move_right_key" translatable="false">moveRight</string>
    <string name="settings_key_binding_move_up_key" translatable="false">moveUp</string>
    <string name="settings_key_binding_move_down_key" translatable="false">moveDown</string>
    <string name="settings_key_binding_increase_font_size_key" translatable="false">increaseFontSize</string>
    <string name="settings_enable_system_status_bar_key" translatable="false">setting_enable_system_status_bar</string>
    <string name="settings_enable_system_status_bar_tittle">Enable System Status Bar</string>
    <string name="settings_enable_reader_status_bar_key" translatable="false">setting_enable_reader_status_bar</string>
    <string name="setting_enable_reader_status_bar_tittle">Enable Reader Status Bar</string>
    <string name="settings_enable_multiple_tabs_key" translatable="false">setting_enable_multiple_tabs</string>
    <string name="settings_enable_multiple_tabs_title">Enable multiple documents</string>
    <string name="settings_version_key" translatable="false">version_key</string>
    <string name="settings_versionName">Version Name</string>
    <string name="export">Export</string>
    <string name="export_options">Export Options</string>
    <string name="export_annotation_explain">(Part only text annotation, exported as TXT format)</string>
    <string name="export_highlight_explain">(Part only highlight show, exported as TXT format)</string>
    <string name="export_scribble_explain">(Part only scribble annotation view, exported as PNG format)</string>
    <string name="export_scribble_full_document_explain">(With scribble and all the original documents, exported as PDF format)</string>
    <string name="export_brush_stroke_color">Export Brush Stroke Color</string>
    <string name="export_location_explain" formatted="false">Export Location: %s</string>
    <string name="read_longest_book" formatted="false">A book to read for the longest: %s</string>
    <string name="read_most_carefully_book" formatted="false">Read the book carefully : %s</string>
    <string name="reading_content_analysis">Reading content analysis</string>
    <string name="recently_read_content">Recently read content</string>
</resources>