<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="reader_setting">
    <Preference
        android:key="@string/settings_system_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_system_summary"
        android:title="@string/settings_system_tittle" />
    <Preference
        android:key="@string/settings_screen_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_screen_summary"
        android:title="@string/settings_screen_tittle" />
    <!--<Preference-->
        <!--android:key="@string/setting_config_key"-->
        <!--android:layout="@layout/settings_custom_preference_item"-->
        <!--android:summary="@string/settings_config_summary"-->
        <!--android:title="@string/settings_config_tittle" />-->
    <Preference
        android:key="@string/settings_status_bar_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_status_bar_summary"
        android:title="@string/settings_status_bar_tittle" />
    <Preference
        android:key="@string/settings_scribble_bar_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_scribble_bar_summary"
        android:title="@string/settings_scribble_bar_tittle" />
    <Preference
        android:key="@string/settings_control_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summary="@string/settings_control_summary"
        android:title="@string/settings_control_tittle" />
    <Preference
            android:key="@string/settings_version_key"
            android:title="@string/settings_versionName"
            android:editable="false"
            android:layout="@layout/settings_custom_preference_item"/>

</PreferenceScreen>