<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="reader_setting" >
    <CheckBoxPreference
        android:key="@string/settings_close_dialog_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summaryOn="@string/settings_enable"
        android:summaryOff="@string/settings_disable"
        android:title="@string/settings_close_dialog_tittle"/>
    <!--<CheckBoxPreference-->
        <!--android:key="@string/setting_save_reader_option_paginally_key"-->
        <!--android:layout="@layout/settings_custom_preference_item"-->
        <!--android:summaryOn="@string/settings_enable"-->
        <!--android:summaryOff="@string/settings_disable"-->
        <!--android:defaultValue="false"-->
        <!--android:title="@string/setting_save_reader_option_paginally_tittle"/>-->
    <CheckBoxPreference
        android:key="@string/settings_enable_system_status_bar_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summaryOn="@string/settings_enable"
        android:summaryOff="@string/settings_disable"
        android:title="@string/settings_enable_system_status_bar_tittle"/>
    <CheckBoxPreference
        android:key="@string/settings_enable_reader_status_bar_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summaryOn="@string/settings_enable"
        android:summaryOff="@string/settings_disable"
        android:title="@string/setting_enable_reader_status_bar_tittle"/>
    <CheckBoxPreference
        android:key="@string/settings_enable_multiple_tabs_key"
        android:layout="@layout/settings_custom_preference_item"
        android:summaryOn="@string/settings_enable"
        android:summaryOff="@string/settings_disable"
        android:title="@string/settings_enable_multiple_tabs_title"/>
    <!--<CheckBoxPreference-->
            <!--android:key="@string/setting_crop_to_width_in_landscape_key"-->
            <!--android:layout="@layout/settings_custom_preference_item"-->
            <!--android:summaryOn="@string/settings_enable"-->
            <!--android:summaryOff="@string/settings_disable"-->
            <!--android:defaultValue="true"-->
            <!--android:title="@string/settings_crop_to_width_in_landscape_title"/>-->

</PreferenceScreen>