<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/export"
        android:textSize="@dimen/dialog_title_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/export_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/annotation_checkbox"
        android:text="@string/annotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="30dp"
        android:text="@string/export_annotation_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/highlight_checkbox"
        android:text="@string/Highlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="30dp"
        android:text="@string/export_highlight_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/scribble_checkbox"
        android:text="@string/scribble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="30dp"
        android:text="@string/export_scribble_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/scribble_full_document_checkbox"
        android:text="@string/scribble_full_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="30dp"
        android:text="@string/export_scribble_full_document_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/export_brush_stroke_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.onyx.android.sdk.ui.view.DynamicMultiRadioGroupView
        android:id="@+id/color_group"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.onyx.android.sdk.ui.view.DynamicMultiRadioGroupView>

    <View
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:text="@string/export_location_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:background="@drawable/no_line_press_bg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_ok"
            android:text="@string/ok"
            android:background="@drawable/left_line_press_bg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
