<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="450dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:text="@string/dialog_password_text_password"
        android:textColor="@android:color/primary_text_light"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="6dp"
        android:gravity="center_vertical"
        android:background="@drawable/dialog_password_edittext_background"
        android:hint="@string/dialog_password_text_password"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="6dp" >

        <Button
            android:id="@+id/button_set"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:text="@string/dialog_password_set"
            android:layout_marginRight="10dp"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:layout_marginLeft="10dp"
            android:text="@string/dialog_password_cancel"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>